fix layout issue

--- a/public/css/containers.css
+++ b/public/css/containers.css
@@ -20,8 +20,8 @@
 
 #gaze_audience_container {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 90vw;
+    height: 90vh;
 }
 
 #gaze_speaker_container {
