--- a/public/css/gaze_audience.css
+++ b/public/css/gaze_audience.css
@@ -27,9 +27,18 @@
 
 #gaze_audience_images {
 	visibility: visible;
+	position: absolute;
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+	width: 100%;
+	height: 100%;
 }
 
 #audience_image1 {
-	width: 800px;
-	height: 450px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-45%, -45%);
+	width: 100%;
 }
